--- a/404.html
+++ b/404.html
@@ -5,9 +5,11 @@
      <meta http-equiv="refresh" content="0; URL=https://migaoricecake.github.io" />
    </head>
    <body>
-     Jodie,
-     Thank you
-     I love you
+     <p>
+     Hi,<br>
+     Thank you<br>
+     I love you<br>
      ~Migao
+     </p>
    </body>
 </html>
