--- a/404.html
+++ b/404.html
@@ -6,10 +6,10 @@
    </head>
    <body>
      <p>
-     Hi,<br>
-     Thank you<br>
-     I love you<br>
-     ~Migao
+     hi,<br>
+     thank you<br>
+     i love you<br>
+     ~migao
      </p>
    </body>
 </html>
