--- a/404.html
+++ b/404.html
@@ -6,10 +6,8 @@
    </head>
    <body>
      <p>
-     hi,<br>
-     thank you<br>
-     i love you<br>
-     ~migao
+     you won't stay with me, i know<br>
+     but you can have your way with me until you go
      </p>
    </body>
 </html>
